[project]
name = "swarm-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-api-python-client>=2.183.0",
    "google-auth-oauthlib>=1.2.2",
    "openai>=1.109.1",
    "streamlit>=1.50.0",
    "swarm>=0.0.2",
]

[tool.uv.sources]
swarm = { git = "https://github.com/openai/swarm.git" }
